# cpp-course

huffman/: CMakeLists.txt  buffer_reader.cpp  buffer_reader.h  buffer_writer.cpp  buffer_writer.h  huf_tree.cpp  huf_tree.h  huffman.cpp  huffman.h  huffman_testing.cpp  main.cpp
string_searcher/: mainwindow.cpp  mainwindow.h  mainwindow.ui  string_searcher.pro
uniqueness_check/: mainwindow.cpp  mainwindow.h  mainwindow.ui  uniqueness_check.pro
upgraded_big_integer/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp  data_store.cpp  data_store.h
upgraded_big_integer/gtest/: gtest-all.cc  gtest-main.cc  gtest.h
